[gd_scene load_steps=20 format=3 uid="uid://bydyl15v36oky"]

[ext_resource type="Texture2D" uid="uid://skp7uuksx7lj" path="res://assets/realistic-transparent-3d-bubbles-underwater-soap-bubbles-vector-illustration-png.webp" id="1_flkib"]
[ext_resource type="Script" path="res://scripts/menus/menu_principal.gd" id="1_mj3rs"]
[ext_resource type="Texture2D" uid="uid://o1g4pkj1d0lc" path="res://assets/LOGO_TITULO-01.png" id="3_b5n55"]
[ext_resource type="Texture2D" uid="uid://b4durhg1r1d31" path="res://assets/botones/BOTON_NEW_GAME.png" id="4_0vdks"]
[ext_resource type="Texture2D" uid="uid://d0pudbb8npoel" path="res://assets/precaucion-02.png" id="4_21oyg"]
[ext_resource type="Texture2D" uid="uid://k6i51r4s14td" path="res://assets/botones/BOTON_NEW_GAME_SELECCION.png" id="5_b83t3"]
[ext_resource type="Texture2D" uid="uid://iitomq0lsgsj" path="res://assets/botones/BOTON_CREDITOS.png" id="6_u3rvf"]
[ext_resource type="Texture2D" uid="uid://5v2f1x350eti" path="res://assets/botones/BOTON_CREDITOS_SELECCION.png" id="7_uj8qo"]
[ext_resource type="Texture2D" uid="uid://dc3pnomlb75ii" path="res://assets/botones/BOTON_SALIR.png" id="8_p06kq"]
[ext_resource type="Texture2D" uid="uid://cmjcqb6otkftp" path="res://assets/botones/BOTON_SALIR_SELECCION.png" id="9_3hr7l"]
[ext_resource type="AudioStream" uid="uid://cwarmtc3hu5ms" path="res://sounds/men√∫.wav" id="11_bt7su"]

[sub_resource type="Gradient" id="Gradient_opm7o"]
colors = PackedColorArray(0.141176, 0.231373, 0.25098, 1, 0.239216, 0.376471, 0.396078, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_anlk0"]
gradient = SubResource("Gradient_opm7o")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_qrpqi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Burbuja6:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1010, 969)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Burbuja2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1094, 720)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Burbuja3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(882, 846)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Burbuja4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(103, 996)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Burbuja5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(210, 934)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Burbuja:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(102, 761)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Burbuja7:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(331, 944)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Burbuja8:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(408, 1033)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Burbuja9:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(695, 1090)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Burbuja10:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(628, 900)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Burbuja11:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(768, 709)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Burbuja12:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(278, 768)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Burbuja13:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(956, 837)]
}

[sub_resource type="Animation" id="Animation_tkiaw"]
resource_name = "burbujas"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Burbuja6:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 15, 20),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1010, 969), Vector2(1010, -112), Vector2(1010, -374)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Burbuja2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 11.0333, 15, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1094, 647.35), Vector2(1094, 720), Vector2(1094, -85.9999), Vector2(1094, -261), Vector2(1094, -313.074)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Burbuja3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5, 10.9667, 15, 19.9333, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(882, 786), Vector2(882, 846), Vector2(882, -338), Vector2(882, -300), Vector2(882, -270.671), Vector2(882, -179)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Burbuja4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.966666, 6.03333, 15, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(103, 977), Vector2(103, 996), Vector2(103, -83.0001), Vector2(103, -109), Vector2(103, -436.749)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Burbuja5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 8.06667, 15, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(210, 934), Vector2(210, 934), Vector2(210, -161), Vector2(210, -403)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Burbuja:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.93333, 10.1333, 15, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(102, 761), Vector2(102, 761), Vector2(102, -92.9999), Vector2(102, -166), Vector2(102, -325.795)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Burbuja7:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0333333, 5, 8.03333, 15, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(331, 578.799), Vector2(331, 944), Vector2(331, 944), Vector2(331, -281), Vector2(331, -329), Vector2(331, -322)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Burbuja8:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 4.03333, 11.0333, 15, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(408, 903), Vector2(408, 1033), Vector2(408, -97), Vector2(408, -156), Vector2(408, -313.781)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Burbuja9:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 8, 13, 15, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(695, 1090), Vector2(695, 1090), Vector2(695, -96.9998), Vector2(695, -145), Vector2(695, -285)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Burbuja10:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.0333333, 11, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(628, 636.749), Vector2(628, 900), Vector2(628, 900), Vector2(628, -371.025)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Burbuja11:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 13.0333, 19.9333, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(768, 709), Vector2(768, 709), Vector2(768, -291.166), Vector2(768, -55.9999)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Burbuja12:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.0333333, 14.9667, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(278, 650.177), Vector2(278, 768), Vector2(278, 768), Vector2(278, -312.368)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Burbuja13:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 14.9667, 18, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(956, 837), Vector2(956, 837), Vector2(956, -131), Vector2(956, -250.883)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p0hgi"]
_data = {
"RESET": SubResource("Animation_qrpqi"),
"burbujas": SubResource("Animation_tkiaw")
}

[sub_resource type="Animation" id="Animation_7whno"]
resource_name = "inicio"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("nuevo_juego:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Creditos:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Salir:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_se1br"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("nuevo_juego:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Creditos:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Salir:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h080d"]
_data = {
"RESET": SubResource("Animation_se1br"),
"inicio": SubResource("Animation_7whno")
}

[node name="menu_principal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mj3rs")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_anlk0")

[node name="CanvasGroup" type="CanvasGroup" parent="."]
modulate = Color(1, 1, 1, 0.745098)
position = Vector2(129, 318)
scale = Vector2(1.415, 1.415)

[node name="Burbuja" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(102, 761)
scale = Vector2(0.735, 0.735)
texture = ExtResource("1_flkib")

[node name="Burbuja2" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(1094, 720)
scale = Vector2(0.66, 0.66)
texture = ExtResource("1_flkib")

[node name="Burbuja3" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(882, 846)
scale = Vector2(0.245, 0.245)
texture = ExtResource("1_flkib")

[node name="Burbuja4" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(103, 996)
scale = Vector2(0.29, 0.29)
texture = ExtResource("1_flkib")

[node name="Burbuja5" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(210, 934)
scale = Vector2(0.59, 0.59)
texture = ExtResource("1_flkib")

[node name="Burbuja6" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(1010, 969)
texture = ExtResource("1_flkib")

[node name="Burbuja7" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(331, 944)
scale = Vector2(0.16, 0.16)
texture = ExtResource("1_flkib")

[node name="Burbuja8" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(408, 1033)
scale = Vector2(0.535, 0.535)
texture = ExtResource("1_flkib")

[node name="Burbuja9" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(695, 1090)
scale = Vector2(0.31, 0.31)
texture = ExtResource("1_flkib")

[node name="Burbuja10" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(628, 900)
scale = Vector2(0.71, 0.71)
texture = ExtResource("1_flkib")

[node name="Burbuja11" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(768, 709)
scale = Vector2(0.31, 0.31)
texture = ExtResource("1_flkib")

[node name="Burbuja12" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(278, 768)
scale = Vector2(0.535, 0.535)
texture = ExtResource("1_flkib")

[node name="Burbuja13" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(956, 837)
scale = Vector2(0.16, 0.16)
texture = ExtResource("1_flkib")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasGroup"]
libraries = {
"": SubResource("AnimationLibrary_p0hgi")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 382.0
offset_bottom = 66.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -293.5
offset_right = 293.5
offset_bottom = 587.0
grow_horizontal = 2
texture = ExtResource("3_b5n55")
expand_mode = 2
stretch_mode = 4

[node name="nuevo_juego" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 23.0
offset_right = 175.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_0vdks")
texture_hover = ExtResource("5_b83t3")
texture_focused = ExtResource("5_b83t3")
ignore_texture_size = true
stretch_mode = 4

[node name="Creditos" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 133.0
offset_right = 175.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_u3rvf")
texture_hover = ExtResource("7_uj8qo")
texture_focused = ExtResource("7_uj8qo")
ignore_texture_size = true
stretch_mode = 4

[node name="Salir" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 246.0
offset_right = 175.0
offset_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8_p06kq")
texture_hover = ExtResource("9_3hr7l")
texture_focused = ExtResource("9_3hr7l")
ignore_texture_size = true
stretch_mode = 4

[node name="disclaimer" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_21oyg")
expand_mode = 1

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_bt7su")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h080d")
}

[connection signal="pressed" from="nuevo_juego" to="." method="_on_nuevo_juego_pressed"]
[connection signal="pressed" from="Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_salir_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
